fix(sonar): appliquer corrections Sonar Way (imports, casts, wildcards, peek, Stream.toList, params inutilisés)
Agent-Logs-Url: https://github.com/ptcherniati/openadom/sessions/9ef0ac07-5401-49ca-8d21-3e99a5b34f48

Co-authored-by: ptcherniati <18171242+ptcherniati@users.noreply.github.com>